--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ MySite
   <!-- 6) 聯絡區（表單示意） -->
   <section id="contact">
     <h2>聯絡我</h2>
-    <form onsubmit="event.preventDefault(); alert('已送出（示範）。');" style="display:grid; gap:.6rem; margin-top:.5rem;">
+    <form onsubmit="event.preventDefault(); alert('已送出。');" style="display:grid; gap:.6rem; margin-top:.5rem;">
       <label>姓名<br><input required style="width:100%; padding:.5rem; border:1px solid #ddd; border-radius:.4rem;"></label>
       <label>Email<br><input type="email" required style="width:100%; padding:.5rem; border:1px solid #ddd; border-radius:.4rem;"></label>
       <label>訊息<br><textarea rows="4" style="width:100%; padding:.5rem; border:1px solid #ddd; border-radius:.4rem;"></textarea></label>
@@ -137,3 +137,4 @@ MySite
 </script>
 </body>
 </html>
+
